WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64679
Fix bugs in Array.prototype this handling.
https://bugs.webkit.org/show_bug.cgi?id=64679
Summary
Fix bugs in Array.prototype this handling.
Gavin Barraclough
Reported
2011-07-17 23:29:04 PDT
undefined/null this values should throw TypeErrors, not convert to the global object.
Attachments
Preliminary patch
(8.89 KB, patch)
2011-07-17 23:31 PDT
,
Gavin Barraclough
no flags
Details
Formatted Diff
Diff
The patch
(23.10 KB, patch)
2011-07-19 11:48 PDT
,
Gavin Barraclough
oliver
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2011-07-17 23:31:37 PDT
Created
attachment 101131
[details]
Preliminary patch
Gavin Barraclough
Comment 2
2011-07-19 11:48:17 PDT
Created
attachment 101353
[details]
The patch
WebKit Review Bot
Comment 3
2011-07-19 12:16:43 PDT
Comment on
attachment 101353
[details]
The patch
Attachment 101353
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9159222
New failing tests: fast/js/string-prototype-properties.html
Gavin Barraclough
Comment 4
2011-07-19 13:52:11 PDT
Fixed in
r91290
Gavin Barraclough
Comment 5
2011-07-31 23:33:02 PDT
Rolled out in 92093. This caused web compatibility issues, particularly with Mac App Store content.
Mark Hahnenberg
Comment 6
2011-08-09 09:51:31 PDT
***
Bug 65885
has been marked as a duplicate of this bug. ***
Gavin Barraclough
Comment 7
2011-09-28 12:02:12 PDT
Re-landed in
r96243
.
Adam Roben (:aroben)
Comment 8
2011-09-28 12:09:12 PDT
Is it possible to write a regression test for this?
Gavin Barraclough
Comment 9
2011-09-28 12:25:14 PDT
(In reply to
comment #8
)
> Is it possible to write a regression test for this?
Errrrrr, I did! And when I rolled the patch out I left them in the tree. So... Ooops!, forgot to commit updated (passing) LayoutTest results, landed in
r96246
.
Darin Adler
Comment 10
2011-09-28 14:24:36 PDT
No test case?
Darin Adler
Comment 11
2011-09-28 14:24:50 PDT
(In reply to
comment #10
)
> No test case?
LOL, I see the earlier comments now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug