https://bugs.webkit.org/show_bug.cgi?id=64679 Fix bugs in Array.prototype this handling.

Unreviewed - rolling out r91290.

Source/JavaScriptCore:

Looks like the wild wild web isn't ready for this yet.

This change broke http://slides.html5rocks.com/#landing-slide.
Interestingly, this might only be due to our lack of bind support -
it looks like this site is calling  Array.prototype.slice as a part
of its bind implementation.

* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncJoin):
(JSC::arrayProtoFuncConcat):
(JSC::arrayProtoFuncPop):
(JSC::arrayProtoFuncPush):
(JSC::arrayProtoFuncReverse):
(JSC::arrayProtoFuncShift):
(JSC::arrayProtoFuncSlice):
(JSC::arrayProtoFuncSort):
(JSC::arrayProtoFuncSplice):
(JSC::arrayProtoFuncUnShift):
(JSC::arrayProtoFuncFilter):
(JSC::arrayProtoFuncMap):
(JSC::arrayProtoFuncEvery):
(JSC::arrayProtoFuncForEach):
(JSC::arrayProtoFuncSome):
(JSC::arrayProtoFuncReduce):
(JSC::arrayProtoFuncReduceRight):
(JSC::arrayProtoFuncIndexOf):
(JSC::arrayProtoFuncLastIndexOf):

LayoutTests:

Checking in failing results - we can't fix this bug just yet
for web compatibility reasons.

* fast/js/array-prototype-properties-expected.txt:
* ietestcenter/Javascript/15.4.4.14-5-28-expected.txt:
* ietestcenter/Javascript/15.4.4.15-5-28-expected.txt:



Canonical link: https://commits.webkit.org/81236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92093 268f45cc-cd09-0410-ab3c-d52691b4dbfc